# adf-analyze

./: .gitignore  README.md  pyproject.toml
dataSets/: after.csv  before.csv
src/: analyze.py  main.py  practice.py
