[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["yupr <12003186+yupr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
statsmodels = "^0.13.5"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
