[tool.poetry]
name = "adf-analyze"
version = "0.1.0"
description = ""
authors = ["yupr <12003186+yupr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
statsmodels = "^0.14.4"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
